@@ -44,6 +44,10 @@
     <string id="30044">Сохранять файлы</string>
     <string id="30045">Спросить о сохранении</string>
     <string id="30046">BTclient (python-libtorrent по http)</string>
+    <string id="30047">Антизапрет (прокси)</string>
+    <string id="30048">Не использовать</string>
+    <string id="30049">Anti-zapret</string>
+    <string id="30050">Immunicity</string>
     <string id="30101">Интерфейс</string>
     <string id="30102">P2P Сеть</string>
     <string id="30103">Дополнительные</string>
