@@ -7,8 +7,10 @@ ported from python-Levenshtein
 [https://github.com/miohtama/python-Levenshtein]
 """
 
-from Levenshtein import *
 from warnings import warn
+
+from Levenshtein import *
+
 
 class StringMatcher:
     """A SequenceMatcher-like class built on the top of Levenshtein"""
