@@ -1,0 +1,5 @@
+#-*- coding: utf-8 -*-
+'''
+    Torrenter v2 plugin for XBMC/Kodi
+    Copyright (C) 2015 DiMartino
+'''
